[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sprites/Stages/CastleGrounds/Sky.png" type="Texture" id=1]
[ext_resource path="res://Scripts/States/MainMenuState.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Mobile/MobileMenuControls.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/scroll2.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/cancel.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/confirm.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sprites/UI/MainMenu/Overlay.png" type="Texture" id=7]
[ext_resource path="res://Scripts/States/MainMenu/Background.gd" type="Script" id=8]
[ext_resource path="res://Assets/Other/Fonts/SuperMarioBrothers-4nmp.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Other/Fonts/arial.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 10 )

[node name="MainMenuState" type="Node2D"]
script = ExtResource( 2 )
descriptions = [ "Where's my keyboard?!", "Scary deviantart OCs coming next update.", "Use this menu to change game settings, such as controls.", "Read about the different characters that appear in this game!" ]

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.5561, 0.576982, 0.67, 1 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background2" type="Sprite" parent="Background"]
position = Vector2( 256, 0 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Overlay" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false

[node name="Label" type="Label" parent="."]
margin_right = 960.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 1 )
text = "MAIN MENU"
align = 1
valign = 1

[node name="Bar" type="ColorRect" parent="."]
margin_top = 624.0
margin_right = 960.0
margin_bottom = 682.0
color = Color( 0, 0, 0, 1 )

[node name="Description" type="Label" parent="Bar"]
margin_right = 960.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Rock, robot rock! | Score: 000000 [FC]"
align = 1
valign = 1

[node name="Sounds" type="Node" parent="."]

[node name="MoveStream" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
volume_db = 4.0

[node name="ConfirmStream" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = 2.5

[node name="CancelStream" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = 4.0

[node name="Buttons" type="CanvasLayer" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="MobileMenuControls" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
